Set up project with babel stage 2 and nodemon

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "roger",
   "version": "1.0.0",
-  "description": "GraphQL, Relay & Flux",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon lib/server.js --exec babel-node",
+    "build": "babel lib -d dist",
+    "serve": "node dist/server.js"
   },
+  "description": "GraphQL, Relay & Flux",
+  "main": "lib/server.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/klippx/roger.git"
@@ -18,5 +20,11 @@
   "homepage": "https://github.com/roger/rogerjs.com#readme",
   "dependencies": {
     "express": "^4.13.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "nodemon": "^1.9.2"
   }
 }
