--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/roger/rogerjs.com#readme",
   "dependencies": {
     "express": "^4.13.4",
+    "flux": "^2.1.1",
     "kerberos": "0.0.21",
     "mappersmith": "^0.13.2",
     "mongodb": "^2.1.18",
