--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.13.4",
     "flux": "^2.1.1",
+    "graphql": "^0.6.0",
     "kerberos": "0.0.21",
     "mappersmith": "^0.13.2",
     "mongodb": "^2.1.18",
